--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 }
   
 body {
-  background-image: url("background.JPG");
+  background-image: url("background.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
