--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* General*/
 html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Roboto', sans-serif;
 }
   
 body {
@@ -41,11 +41,10 @@ body {
   width: 100px;
   height: 100px;
   border: 3px solid #fff;
-    border-radius: 50%;
-  }
+  border-radius: 50%;
+}
   
 .profile p {
-  font-size: 1.8em;
   font-weight: 900;
   letter-spacing: 2px;
   color: #fff;
@@ -119,39 +118,64 @@ body {
   font-size: 20px;
 }
 
+/* Adjustments for smartphone */
 @media screen and (max-width: 600px)
 {
-  .non-footer {
-      padding: 26px;
-      margin: 0;
+  html {
+    max-width: 100vw;
   }
 
-  .profile p {
-      font-size: 1.5em;
+  .non-footer {
+    padding: 18px;
+    margin: 0;
+  }
+
+  .profile img {
+    width: 90px;
+    height: 90px;
+  }
+
+  .text h3 {
+    font-size: 22px; 
   }
 
   .text a {
-      font-size: 16px;
+    font-size: 16px;
   }
 
   .link a {
-      font-size: 16px;
+    font-size: 16px;
+    padding: 12px 18px;
   }
 
   .footer{
-      font-size: 18px;
+    font-size: 18px;
+    padding: 10px 0;
   }
 
  .footer i {
-      font-size: 18px;
+    font-size: 18px;
   }
 }
 
+/* Adjustments for tablet */
 @media screen and (max-width: 900px) and (min-width: 600px)
 {
+  html {
+    max-width: 100vw;
+  }
+
   .non-footer {
-    padding: 26px;
+    padding: 24px;
     margin: 0;
+  }
+
+  .link a {
+    padding: 14px 20px;
+  }
+
+  .footer{
+    padding: 10px 0;
   }
 }
   
