--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ body {
     max-width: 100vw;
   }
 
+  body {
+    background-image: url("background-smartphone.jpg");
+  }
+
   .non-footer {
     padding: 18px;
     margin: 0;
@@ -163,6 +167,10 @@ body {
 {
   html {
     max-width: 100vw;
+  }
+
+  body {
+    background-image: url("background-tablet.jpg");
   }
 
   .non-footer {
